Move strimzi api and dev manifests to 1.0.0
Signed-off-by: David Kornel <kornys@outlook.com>